--- a/setup.cfg
+++ b/setup.cfg
@@ -1,19 +1,13 @@
 # SENSORS
-# for our standard mti/flea3 setup: xforward, y screen left, z up
 SENSOR_POSE_CONSTVEL: [6](0, 0, 0, -90, 0, -90)
-# for a maya standard camera: x screen right, y up and z backward
-#SENSOR_POSE_CONSTVEL: [6](0, 0, 0, 0, -180, -180)
-# for a maya z-forward (used accidentally in run02.cut2) - x left, y up, z forward
-#SENSOR_POSE_CONSTVEL: [6](0, 0, 0, 0, -180, -180)
-# zero'd - x right, y down, z forward (image-space coords?)
-#SENSOR_POSE_CONSTVEL: [6](0, 0, 0, 0,0,0)
 
 # flea hand held setup
-SENSOR_POSE_INERTIAL: [6](-0.002, -0.005, -0.029, 90, 0, 90)
+#SENSOR_POSE_INERTIAL: [6](-0.002, -0.005, -0.029, 90, 0, 90)
 # on mana platine with left marlin
 #SENSOR_POSE_INERTIAL: [6](0.005, 0.185, 0.002, -90, 0, -90)
 # luma plate
-SENSOR_POSE_INERTIAL: [6](-0.00069, -0.00635, -0.027, -90, 0, -90)
+#SENSOR_POSE_INERTIAL: [6](-0.00069, -0.00635, -0.027, -90, 0, -90)
+SENSOR_POSE_INERTIAL: [6](0.002, -0.00635, -0.027, -90, 0, -90)
 
 # mana
 GPS_POSE: [6](-0.87, 0.12, 0.37, 0.0, 0.0, 0.0)
@@ -40,15 +34,20 @@ IMG_HEIGHT: 480
 #INTRINSIC: [4](327.3508, 249.9982, 622.0489, 621.6159)
 #DISTORTION: [3](-0.3270245, 0.1944629, -0.09558001)
 # The values calculated with DLR calde/callab (for Creative Labs USB)
-INTRINSIC: [4](324.965, 237.26, 657.03, 657.63)
-DISTORTION: [3](-0.0158889, -0.0160508, 0.0000)
+#INTRINSIC: [4](324.965, 237.26, 657.03, 657.63)
+#DISTORTION: [3](-0.0158889, -0.0160508, 0.0000)
 # The values calculated with DLR calde/callab (for Flea3, run1)
 #INTRINSIC: [4](295.28, 227.44, 302.54, 302.49)
 #DISTORTION: [3](-0.0120697, -0.00161449, 0.0000)
 # The values calculated with DLR calde/callab (for Flea3, run2)
-#INTRINSIC: [4](294.81, 227.31, 298.22, 297.60)
-#DISTORTION: [3](-0.00935248, -0.000559226, 0.0000)
-FREQ: 60
+INTRINSIC: [4](294.81, 227.31, 298.22, 297.60)
+DISTORTION: [3](-0.00935248, -0.000559226, 0.0000)
+# matlab calibration for luma Flea3
+INTRINSIC: [4](294.34932, 252.22024, 298.22, 297.60)
+DISTORTION: [3](-0.02030, 0.01465, -0.00452)
+
+FREQ: 120
+
 
 # SIMU SENSOR
 IMG_WIDTH_SIMU: 640
@@ -61,14 +60,16 @@ UNCERT_HEADING: 0.0
 UNCERT_ATTITUDE: 0.0
 
 # CONSTANT VELOCITY
-UNCERT_VLIN: .0625
-UNCERT_VANG: .125
-PERT_VLIN: .125
-PERT_VANG: .25
-# UNCERT_VLIN: .5
-# UNCERT_VANG: .5
-# PERT_VLIN: 2.0
-# PERT_VANG: 2.0
+#UNCERT_VLIN: .0625
+#UNCERT_VANG: .125
+#PERT_VLIN: .125
+#PERT_VANG: .25
+
+# Original / default vals
+UNCERT_VLIN: .5
+UNCERT_VANG: .5
+PERT_VLIN: 2.0
+PERT_VANG: 2.0
 
 # INERTIAL (also using UNCERT_VLIN)
 MTI_DEVICE: /dev/ttyUSB0
@@ -82,7 +83,7 @@ MTI_DEVICE: /dev/ttyUSB0
 #ACCELERO_NOISE: 0.008
 
 ACCELERO_FULLSCALE: 50.0
-ACCELERO_NOISE: 0.011
+ACCELERO_NOISE: 0.02
 
 # Orig vals
 #GYRO_FULLSCALE: 5.23599
@@ -93,7 +94,8 @@ ACCELERO_NOISE: 0.011
 #GYRO_NOISE: 0.005
 
 GYRO_FULLSCALE: 5.23599
-GYRO_NOISE: 0.00772691
+GYRO_NOISE: 0.015
+
 
 UNCERT_GRAVITY: 0.01
 UNCERT_ABIAS: 0.01
@@ -105,7 +107,7 @@ PERT_RANWALKGYRO: 0.0
 
 # original
 #IMU_TIMESTAMP_CORRECTION: 0.0115
-IMU_TIMESTAMP_CORRECTION: 0.0
+IMU_TIMESTAMP_CORRECTION: 0.01
 GPS_TIMESTAMP_CORRECTION: 0.0
 
 # SIMU INERTIAL
